--- a/scheduling/src/main/resources/templates/login.html
+++ b/scheduling/src/main/resources/templates/login.html
@@ -17,8 +17,11 @@
 	th:href="@{/assets/css/login.css}"
 >
 
-
-
+<link
+	rel="icon"
+	type="image/png"
+	th:href="@{/images/gardnerLogo.png}"
+>
 </head>
 <body>
 
