--- a/scheduling/src/main/resources/templates/studentProfile/student.html
+++ b/scheduling/src/main/resources/templates/studentProfile/student.html
@@ -230,7 +230,7 @@
 									</div>
 									<div class="card-body">
 										<table
-											id="shiftSchedule_table"
+											id="studentProfile_Table"
 											class="table table-striped table-bordered"
 										>
 											<thead>
