--- a/scheduling/src/main/resources/templates/teacherProfile/teacher.html
+++ b/scheduling/src/main/resources/templates/teacherProfile/teacher.html
@@ -272,7 +272,7 @@
 									<div class="card-body">
 										<table
 											style="width: 100%;"
-											id="teacher_Breaktime_Table"
+											id="teacherProfile_Breaktime_Table"
 											class="table table-striped table-bordered"
 										>
 											<thead>
@@ -325,7 +325,7 @@
 									<div class="card-body">
 										<table
 											style="width: 100%;"
-											id="teacher_Lecture_Table"
+											id="teacherProfile_Lecture_Table"
 											class="table table-striped table-bordered"
 										>
 											<thead>
@@ -372,7 +372,7 @@
 									<div class="card-body">
 										<table
 											style="width: 100%;"
-											id="roomShift_Student_Table"
+											id="teacherProfile_Students"
 											class="table table-striped table-bordered"
 										>
 											<thead>
@@ -439,7 +439,7 @@
 									<div class="card-body">
 										<table
 											style="width: 100%;"
-											id="teacher_Schedule_Table"
+											id="teacherProfile_Schedule_Table"
 											class="table table-striped table-bordered"
 										>
 											<thead>
@@ -489,7 +489,7 @@
 									<div class="card-body">
 										<table
 											style="width: 100%;"
-											id="subject_table"
+											id="teacherProfile_subjectTable"
 											class="table table-striped table-bordered"
 										>
 											<thead>
